--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ dependencies:
   cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.8.1
   cloud_firestore: ^0.13.6
-  ai_barcode: ^1.0.4
+  ai_barcode: ^1.0.6
   firebase_analytics: ^5.0.16
   floating_pullup_card: ^0.2.1
   easy_permission_validator: ^2.0.0
   intl: ^0.16.1
   country_code_picker: ^1.3.15
   firebase_auth: ^0.16.1
+  firebase_auth_web: ^0.1.3+1
   firebase_storage: ^3.1.6
   flutter_string_encryption: ^0.3.1
   shared_preferences: ^0.5.8
@@ -44,9 +45,10 @@ dependencies:
   xml2json: ^4.3.0
   cloud_functions: ^0.5.0
   firebase_messaging: ^6.0.16
-  camera:
+  camera: ^0.5.8+5
   path_provider:
   path: ^1.7.0
+  url_launcher: ^5.5.0
 
 
 dev_dependencies:
@@ -71,6 +73,7 @@ flutter:
     - assets/images/card/visa.jpg
     - assets/images/card/viza.png
     - assets/images/camera_placeholder.png
+    - assets/images/adduser.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
